src/styles/global_cfg.scss
html,
body {
  @apply w-full font-mulish;
}

.content-height {
  min-height: calc(100vh - 6.25rem);
}

h1 {
  @apply text-4xl  text-black;
}

h2 {
  @apply text-2xl text-black;
}

h3 {
  @apply text-xl leading-5  text-black;
}

h4 {
  @apply text-base  text-black;
}

h5 {
  @apply text-sm leading-4.5 text-black;
}

h6 {
  @apply text-xs leading-3.5 text-black;
}

p {
  @apply text-base font-normal text-black;
}

// .mat-button {
//   @apply rounded-xl py-3 px-8;
// }

/* Buttons style overrides */

.mat-button.mat-primary {
  @apply bg-primary-50 #{'!important'};
}

.mat-button.mat-accent {
  @apply bg-accent-50 #{'!important'};
}

.mat-button.mat-warn {
  @apply bg-red-100 #{'!important'};
}

.mat-button.mat-button-disabled {
  @apply bg-black bg-opacity-[0.12] #{'!important'};
}

.mat-button,
.mat-flat-button,
.mat-raised-button,
.mat-stroked-button {
  padding: 0.5rem 1.5rem !important;
  line-height: 1rem !important;
  border-radius: 0.5rem !important;
  letter-spacing: 0.02rem !important;
}

// table styles

$table-border: #d7d7d7;

.table-border-b {
  border-bottom-color: $table-border;
  @apply border-solid border-b-1;
}

.table-border-y {
  border-top-color: $table-border;
  border-bottom-color: $table-border;
  @apply border-solid border-y-1;
}

.table-border-l {
  border-left-color: $table-border;
  @apply border-solid border-l-1;
}

.table-border-r {
  border-right-color: $table-border;
  @apply border-solid border-r-1;
}

.mat-row .mat-cell {
  @apply table-border-b;
}

.borderless .mat-row .mat-cell {
  @apply border-b-transparent;
}

.mat-table {
  @apply border-separate;

  .mat-header-row {
    @apply bg-primary-50 h-13;

    .mat-header-cell {
      @apply bg-primary-50 table-border-y font-bold text-black text-xs pr-6;
    }

    .mat-header-cell:first-child {
      border-radius: 0.5rem 0 0 0;
      @apply table-border-l;
    }

    .mat-header-cell:last-child {
      border-radius: 0 0.5rem 0 0;
      @apply table-border-r;
    }
  }

  .mat-row {
    @apply h-16;

    .mat-cell {
      @apply text-black text-xs pr-6;
    }

    .mat-cell:first-child {
      @apply table-border-l;
    }

    .mat-cell:last-child {
      @apply table-border-r;
    }
  }

  .mat-row:last-child {
    .mat-cell {
      @apply table-border-b;
    }

    .mat-cell:first-child {
      border-radius: 0 0 0 0.5rem;
    }

    .mat-cell:last-child {
      border-radius: 0 0 0.5rem 0;
    }
  }
}

.mat-slide-toggle.mat-primary.mat-checked {
  .mat-slide-toggle-label {
    .mat-slide-toggle-bar {
      @apply bg-primary-200 #{'!important'};
    }
  }
}

.mat-dialog-container {
  padding: 40px !important;
  border-radius: 16px !important;
  .mat-dialog-title {
    //typography
    font-family: "Mulish" !important;
    font-style: normal !important;
    font-weight: 700 !important;
    font-size: 18px !important;
    line-height: 24px !important;
    //display
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    .mat-icon {
      height: 16px;
      width: 16px;
    }
  }
  .mat-dialog-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .mat-dialog-actions {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
  }
}

.mat-form-field {
  @apply max-w-full;

  .mat-form-field-wrapper {
    padding: 0px;
  }

  .mat-icon-button {
    width: auto !important;
    height: auto !important;
  }

  .mat-form-field-flex {
    @apply flex items-center border-solid border-1 rounded-lg border-transparent bg-gray-200 #{!important};
    padding: 6px 16px !important;
    min-height: 48px !important;
  }

  .mat-form-field-infix {
    padding: 0px !important;
  }

  .mat-input-element {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-select-value {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-form-field-label {
    color: #5c5c5c !important;
    transform: translateY(-0.59375em) scale(1) !important;
    font-size: 0.75rem /* 12px */ !important;
    line-height: 1rem /* 16px */ !important;
    font-weight: 700 !important;
  }
  .mat-form-field-underline {
    display: none;
  }
  .mat-form-field-ripple {
    display: none;
  }
  .mat-form-field-required-marker {
    display: none;
  }
  .mat-form-field-subscript-wrapper {
    @apply font-mulish;
    position: relative;
    top: auto;
    padding: 0 !important;
    margin-top: 0;
    font-size: 12px;
    line-height: 16px;
    font-weight: 400;

    .mat-error,
    .mat-hint {
      display: block;
      margin-top: 4px;
    }

    .mat-hint {
      @apply text-orange-600 #{'!important'};
    }
  }
}

.mat-form-field.mat-focused {
  @apply max-w-full;

  .mat-form-field-wrapper {
    padding: 0px;
  }

  .mat-icon-button {
    width: auto !important;
    height: auto !important;
  }

  .mat-form-field-flex {
    @apply flex items-center border-solid border-1 rounded-lg border-primary-500 bg-gray-200 #{!important};
    padding: 6px 16px !important;
    min-height: 48px !important;
  }

  .mat-form-field-infix {
    padding: 0px !important;
  }

  .mat-input-element {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-select-value {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-form-field-label {
    color: #5c5c5c !important;
    transform: translateY(-0.59375em) scale(1) !important;
    font-size: 0.75rem /* 12px */ !important;
    line-height: 1rem /* 16px */ !important;
    font-weight: 700 !important;
  }
  .mat-form-field-underline {
    display: none;
  }
  .mat-form-field-ripple {
    display: none;
  }
  .mat-form-field-required-marker {
    display: none;
  }
  .mat-form-field-subscript-wrapper {
    @apply font-mulish;
    position: relative;
    top: auto;
    padding: 0 !important;
    margin-top: 0;
    font-size: 12px;
    line-height: 16px;
    font-weight: 400;

    .mat-error,
    .mat-hint {
      display: block;
      margin-top: 4px;
    }

    .mat-hint {
      @apply text-orange-600 #{'!important'};
    }
  }
}

.mat-form-field-invalid {
  @apply max-w-full;

  .mat-form-field-wrapper {
    padding: 0px;
  }

  .mat-icon-button {
    width: auto !important;
    height: auto !important;
  }

  .mat-form-field-flex {
    @apply flex items-center border-solid border-1 rounded-lg border-red-500 bg-gray-200 #{!important};
    padding: 6px 16px !important;
    min-height: 48px !important;
  }

  .mat-form-field-infix {
    padding: 0px !important;
  }

  .mat-input-element {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-select-value {
    color: #181818 !important;
    font-size: 0.875rem /* 12px */ !important;
    line-height: 1.125rem /* 16px */ !important;
    font-weight: 400 !important;
  }

  .mat-form-field-label {
    color: #5c5c5c !important;
    transform: translateY(-0.59375em) scale(1) !important;
    font-size: 0.75rem /* 12px */ !important;
    line-height: 1rem /* 16px */ !important;
    font-weight: 700 !important;
  }
  .mat-form-field-underline {
    display: none;
  }
  .mat-form-field-ripple {
    display: none;
  }
  .mat-form-field-required-marker {
    display: none;
  }
  .mat-form-field-subscript-wrapper {
    @apply font-mulish;
    position: relative;
    top: auto;
    padding: 0 !important;
    margin-top: 0;
    font-size: 12px;
    line-height: 16px;
    font-weight: 400;

    .mat-error,
    .mat-hint {
      display: block;
      margin-top: 4px;
    }

    .mat-hint {
      @apply text-orange-600 #{'!important'};
    }
  }
}

